2005-12-20  Tim Waugh <twaugh@redhat.com>

	* printer/HP-PSC_1300.xml: Corrected IEEE 1284 information (RH
	  bug #174957).

	* printer/HP-OfficeJet_5110.xml: Added IEEE 1284 information (RH
	  bug #176224).

2005-12-09  Till Kamppeter <till.kamppeter@gmx.net>

	* PPD/Brother/*.ppd: Added 35 PPD files released under GPL by
	  Brother.

2005-11-16  George Liu <george.liu@ussj.ricoh.com>

	* Updated all 178 PCL-XL XML files for Ricoh, Savin, Gestetner, NRG,
	Infotec and Lanier, with information on UserCode/LockedPrint usage.

2005-11-15  George Liu <george.liu@ussj.ricoh.com>

	* Updated all 178 PCL-XL PPD files for Ricoh, Savin, Gestetner, NRG,
	Infotec and Lanier. The new PPDs support JobLog features, namely
	Usercode, LockedPrint, SamplePrint and DocServer. 

2005-11-14  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml: Added HP Color LaserJet 3000 and 3800.

2005-11-11  George Liu <george.liu@ussj.ricoh.com>

	* Renamed Ricoh Aficio Color 2206 to Ricoh Aficio 5206. 
	  Updated opt/6.xml, opt/Postscript-Resolution.xml,
	  driver/Postscript.xml
	  Removed printer/Ricoh-Aficio_Color_2206.xml
	  Added printer/Ricoh-Aficio_5206.xml

2005-11-09  Tim Waugh <twaugh@redhat.com>

	* printer/Minolta-PagePro_1350W.xml: Added IEEE 1284 information (RH
	  bug #172347).

2005-11-02  George Liu <george.liu@ussj.ricoh.com>

	* PPD/ Added 44 new Ricoh Family and OEM Postscript PPD files.
        * printer/ Added 44 printer xml files for the new Postscript printer entries.
        * driver/Postscript.xml Added 44 printer entries

2005-10-31  George Liu <george.liu@ussj.ricoh.com>

	* PPD/ Fixed a duplex bug and updated 136 PXL PPD files for Ricoh,
	Lanier, Gestetner, Infotec, Savin and NRG. Also removed 300dpi
	support for those models.

	* PPD/, /printer,  Added 42 color PCL-XL PPD and xml files for Ricoh Family
	and OEMs. Added the 42 printer entries into pxlmono.xml and
	pxlcolor.xml.

2005-10-27  Till Kamppeter <till.kamppeter@gmx.net>
