@@ -20,7 +20,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <manufacturer>OKI DATA CORP</manufacturer>
+      <model>ML320/1TURBO</model>
+      <description>OKIDATA ML320/1 TURBO</description>
+      <commandset>EPSON,IBM,MICROLINE</commandset>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
   <driver>okiibm</driver>
   <!--no "contrib_url"-->
