@@ -1,3 +1,8 @@
+2005-12-21  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Okidata-ML_320.xml: Added IEEE 1284 information (RH
+	  bug #176271).
+
 2005-12-20  Tim Waugh <twaugh@redhat.com>
 
 	* printer/HP-PSC_1300.xml: Corrected IEEE 1284 information (RH
